         PicoCentauri, davidercruz, jbarnoud, RMeli, IAlibay, mtiberti, CCook96,
         Yuan-Yu, xiki-tempula, HTian1997, Iv-Hristov, hmacdope, AnshulAngaria,
         ss62171, Luthaf, yuxuanzhuang, abhishandy, mlnance, shfrz, orbeckst,
         wvandertoorn, cbouy, AmeyaHarmalkar, Oscuro-Phoenix, andrrizzi, WG150,
         tylerjereddy, Marcello-Sega

  * 0.21.0

Fixes
  * Use user-provided `remark` in `XYZWriter` (Issue #2692)
  * Added more informative error messages about topology attributes
    (Issue #2565)
  * Made NoDataError a subclass of ValueError *and* AttributeError
    (Issue #2635)
  * Fixed select_atoms("around 0.0 ...") selections and capped_distance 
    causing a segfault (Issue #2656 PR #2665)
  * `PDBWriter` writes unitary `CRYST1` record (cubic box with sides of 1 Å)
    when `u.dimensions` is `None` or `np.zeros(6)` (Issue #2679, PR #2685)
  * Ensures principal_axes() returns axes with the right hand convention (Issue #2637)
  * Fixed retrieval of auxiliary information after getting the last timestep
    of the trajectory (Issue #2674, PR #2683).
  * n_components correctly selects PCA components (Issue #2623)
  * Use internal residue indices instead of resids for similarity and connectivity
    selections (Issues #2669 and #2672, PR #2673)
  * Checks for cryo-em 1 A^3 default CRYST1 record, 
    disabling setting of box dimensions if found (Issue #2599)
  * mdamath.angles now returns np.pi instead of -np.pi in cases of
    lower bound roundoff errors. (Issue #2632, PR #2634)
  * Proper error message for AlignTraj on trajectory without mass (Issue #2469)
  * Updated tests to have explicit fixtures (Issue #2618)
  * XDR offsets now read from trajectory if offsets file read-in fails on
    IOError (Issue #1893, PR #2611)
  * Fixed the deprecation warning from `collections` library in `flatten_dict`
    (Issue #2605)
  * Fixed test for the `save_paths` and `load` methods of :class:`PSAnalysis`
    (Issue #2593)